tests/invalid/len_non_sequence/main.py
x: int = 42
y: int = len(x)
